# txt-sink-api

./: .dockerignore  .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  build_and_deploy.yml  pr.yml
cisco_test_project/: manage.py
cisco_test_project/txt_sink_api_core/: asgi.py  settings.py  urls.py  wsgi.py
files/: models.py  serializers.py  urls.py  views.py
files/migrations/: 0001_initial.py
scripts/: docker.entrypoint.sh  production_data.py
src/: conftest.py
src/apps/files/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/files/migrations/: 0002_rename_uri_files_url.py
src/apps/files/tests/: test_upload_file.py
src/apps/files/tests/e2e/: test_get_files.py  test_upload_file.py
src/apps/files/tests/fixtures/: __init__.py  files.py  fixture_files.py
src/core/: middlewares.py  urls.py  views.py
src/core/settings/: __init__.py  aws.py  base.py  docker.py  envvars.py  prod.py  rds_db.py  rest_framework.py  setting_logging.py
src/core/settings/templates/: settings.dev.py  settings.unittests.py
src/files/: views.py
src/general/: serializers.py
src/general/models/: created_modified.py
src/general/tests/fixtures/: __init__.py  clients.py  test_settings.py
src/general/utils/: crypto_types.py  cryptography.py  misc.py  setting_collections.py  setting_pytest.py  settings.py
