[tool.poetry]
name = "txt_sink_api"
version = "0.1.0"
description = "API for Dockerized Django Web Application with AWS (Amazon Web Services) Integration"
authors = ["Adem Mohammed <abulhuman.dev@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
django-filter = "^24.3"
boto3 = "^1.35.84"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"
model-bakery = "^1.20.0"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"
split-settings = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
